Mejorado formato y resuelto ejercicios

--- a/codigo/Colecciones.ipynb
+++ b/codigo/Colecciones.ipynb
@@ -381,14 +381,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "88c742e2-8034-4d24-a4f9-ee13f2c2299e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "faeb5c15-6301-4a4c-80c3-2837a2a95e16",
    "metadata": {},
@@ -421,7 +413,10 @@
     "        \"edad\": 51,\n",
     "        \"notas\": [1, 2.5, 2, 8]\n",
     "    }\n",
-    "}"
+    "}\n",
+    "\n",
+    "print(alumnos)\n",
+    "print(alumnos[2])"
    ]
   },
   {
