--- a/codigo/Control de flujo.ipynb
+++ b/codigo/Control de flujo.ipynb
@@ -290,26 +290,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f18a97aa-b748-4b22-af30-052aa43ebc4b",
-   "metadata": {},
-   "source": [
-    "### Contador\n",
-    "\n",
-    "Crear un contador que vaya sumando numeros fijos\n",
-    "\n",
-    "*Este tipo de contadores se utilizan mucho en bases de datos, colas, ids de varios tipos, ...*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "43497eb7-6283-413e-a52a-484b94f06edc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "167d850c-926c-4859-9d7e-ab7afcd6f4f6",
    "metadata": {},
    "source": [
@@ -326,7 +306,16 @@
    "id": "41a35133-b9a1-457d-8476-c63a82e381bf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "edad = 20\n",
+    "\n",
+    "if edad >= 18:\n",
+    "    print(\"Eres mayor de edad\")\n",
+    "elif 0 < edad < 18:\n",
+    "    print(\"Aun eres un niño\")\n",
+    "else:\n",
+    "    print(\"No tiene sentido una edad negativa\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -344,7 +333,13 @@
    "id": "58820879-aea8-4387-9af3-d4edec77a296",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "numero = 16\n",
+    "if numero % 5 == 0 or numero % 3 == 0:\n",
+    "    print(\"El numero es divisible por 3 o por 5\")\n",
+    "else:\n",
+    "    print(\"El numero tiene otros divisores\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -362,9 +357,12 @@
    "outputs": [],
    "source": [
     "# Comprobar si un numero es par o impar\n",
+    "\n",
     "var = 2\n",
-    "\n",
-    "\n",
+    "if var % 2 == 0:\n",
+    "    resultado = \"Es par\"\n",
+    "else:\n",
+    "    resultado = \"Es impar\"\n",
     "\n",
     "print(resultado)"
    ]
@@ -377,26 +375,10 @@
    "outputs": [],
    "source": [
     "# Crear tablas de multiplicar automaticas\n",
-    "numero_tabla = 1\n",
     "\n",
-    "\n",
-    "\n",
-    "print(resultado)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fb1133b8-0197-4bcd-9f03-64822c39f8fa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Sumar conjunto de numeros y calcular media\n",
-    "var = [3, 6, 8, 4, 1, 10, 2, -4]\n",
-    "\n",
-    "\n",
-    "\n",
-    "print(resultado)"
+    "numero_tabla = 4\n",
+    "for multiplo in range(10):\n",
+    "    print(f\"{numero_tabla} x {multiplo + 1} = {numero_tabla * (multiplo + 1)}\")"
    ]
   },
   {
@@ -407,27 +389,10 @@
    "outputs": [],
    "source": [
     "# Juntar dos secuencias en un diccionario\n",
-    "# > Pista: usar enumerate() o zip()\n",
+    "\n",
     "claves = [1, 2, 3, 4, 5]\n",
     "valores = [\"Juan\", \"Ana\", \"Raquel\", \"Antonio\", \"Belen\"]\n",
-    "\n",
-    "\n",
-    "\n",
-    "print(resultado)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "580bffaa-a62f-4f46-9774-3cf72b45929b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Comprobar si un numero es primo o no\n",
-    "numero = 6\n",
-    "\n",
-    "\n",
-    "\n",
+    "resultado = dict(zip(claves, valores))\n",
     "print(resultado)"
    ]
   }
