--- a/codigo/Variables y fundamentos.ipynb
+++ b/codigo/Variables y fundamentos.ipynb
@@ -97,7 +97,7 @@
    "source": [
     "Las variables tienen un *valor*, que es lo que almacenan, y una *referencia*, que es una etiqueta que identifica ese lugar en memoria\n",
     "\n",
-    "[![](https://miro.medium.com/v2/resize:fit:1400/1*t1Jjp3moTD1KCA75Kd_PSA.png)]()"
+    "<img src=\"https://miro.medium.com/v2/resize:fit:1400/1*t1Jjp3moTD1KCA75Kd_PSA.png\" width=\"600\" height=\"600\" />"
    ]
   },
   {
@@ -512,7 +512,18 @@
    "source": [
     "# Encontrar el máximo de una lista de números\n",
     "\n",
-    "\n"
+    "lista = [1, 4, 7, 2, 3, 9, 4, 1]\n",
+    "\n",
+    "# con max()\n",
+    "maximo = max(lista)\n",
+    "print(maximo)\n",
+    "\n",
+    "# con bucle\n",
+    "maximo = 0\n",
+    "for numero in lista:\n",
+    "    if numero > maximo:\n",
+    "        maximo = numero\n",
+    "print(maximo)"
    ]
   },
   {
@@ -524,7 +535,9 @@
    "source": [
     "# Calcular la media de una lista de números\n",
     "\n",
-    "\n"
+    "lista = [1, 4, 7, 2, 3, 9, 4, 1]\n",
+    "\n",
+    "media = sum(lista)/len(lista)\n"
    ]
   },
   {
@@ -536,7 +549,11 @@
    "source": [
     "# Crear un filtro de obscenidad\n",
     "\n",
-    "\n"
+    "palabrota = \"mierda\"\n",
+    "censura = \"###\"\n",
+    "texto = \"El equipo rojo es una mierda, no valen para nada, saco de mierda\"\n",
+    "texto = texto.replace(palabrota, censura)\n",
+    "print(texto)"
    ]
   }
  ],
