Pequeños cambios de las notas

--- a/codigo/Archivos.ipynb
+++ b/codigo/Archivos.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "archivo = open(\"test.txt\", \"w\")  # Modo de escritura\n",
     "archivo.write(\"Hola mundo!\")\n",
-    "archivo.close() "
+    "archivo.close()"
    ]
   },
   {
@@ -45,7 +45,7 @@
     "archivo = open(\"test.txt\")  # Por defecto el modo es \"rt\", es decir, lectura de texto\n",
     "info = archivo.read()\n",
     "print(info)\n",
-    "archivo.close() "
+    "archivo.close()"
    ]
   },
   {
@@ -58,12 +58,19 @@
     "Estos son los principales métodos de los tipos de datos archivo.\n",
     "\n",
     ".close() ---> Cierra el archivo, importante hacerlo cada vez que se termine de usar\n",
+    "\n",
     ".read(int) ---> Lee un numero int de bytes (por defecto, todo el archivo al completo)\n",
+    "\n",
     ".readline(int) ---> Lee una única linea del archivo (también puedes especificar tamaño en bytes). Se puede iterar en un bucle\n",
+    "\n",
     ".readlines(int) ---> Lee lineas guardandolas en una lista. Se puede especificar tamaño en bytes\n",
+    "\n",
     ".tell() ---> Muestra la posición actual del cursor\n",
+    "\n",
     ".seek(int) ---> Situa el cursor de lectura en la posición int\n",
+    "\n",
     ".write(byte|str) ---> Escribe en el archivo, ya sea como texto (str) o bytes (byte)\n",
+    "\n",
     ".writelines(lista) ---> Escribe linea a linea en el archivo, siendo una linea por cada posición en la lista"
    ]
   },
@@ -111,7 +118,7 @@
     "var = uniform(empieza, acaba)\n",
     "```\n",
     "\n",
-    "`uniform()` genera un número aleatorio entre un numero float y otro numero float, con un gran número de decimales\n",
+    "`uniform(<float inicio>, <float final>)` genera un número aleatorio entre un numero float y otro numero float, con un gran número de decimales\n",
     "\n",
     "```python\n",
     "from random import randint\n",
@@ -121,7 +128,7 @@
     "var = randint(empieza, acaba)\n",
     "```\n",
     "\n",
-    "`randint()` genera un número aleatorio entre un numero int y otro numero int, sin decimales\n",
+    "`randint(<int inicio>, <int final>)` genera un número aleatorio entre un numero int y otro numero int, sin decimales\n",
     "\n",
     "## Seeding\n",
     "\n",
@@ -181,7 +188,30 @@
    "source": [
     "# Crear una baraja y barajarla\n",
     "\n",
-    "\n"
+    "import random\n",
+    "\n",
+    "figuras = ('Corazones', 'Diamantes', 'Tréboles', 'Picas')\n",
+    "valores = ('As', '2', '3', '4', '5', '6', '7', '8', '9', '10', 'Jota', 'Reina', 'Rey')\n",
+    "\n",
+    "class Carta:\n",
+    "    def __init__(self, valor: str, figura: str):\n",
+    "        self.valor = valor\n",
+    "        self.figura = figura\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"{self.valor} de {self.figura}\"\n",
+    "\n",
+    "class Baraja:\n",
+    "    def __init__(self):  # Perfecto\n",
+    "        self.cartas = [Carta(valor, figura) for figura in figuras for valor in valores]\n",
+    "\n",
+    "    def barajar(self):\n",
+    "        random.shuffle(self.cartas)\n",
+    "        print(\"Se ha barajado la baraja\")\n",
+    "\n",
+    "    def mostrar(self):\n",
+    "        for carta in self.cartas:\n",
+    "            print(carta)  #TODO: Cambiar esto\n"
    ]
   },
   {
@@ -196,18 +226,18 @@
     "```python\n",
     "from sys import version\n",
     "\n",
-    "var = version()\n",
+    "var = version\n",
     "```\n",
     "\n",
-    "`version()` muestra la versión del interprete actual de Python.\n",
+    "`version` muestra la versión del interprete actual de Python.\n",
     "\n",
     "```python\n",
     "from sys import platform\n",
     "\n",
-    "var = platform()\n",
+    "var = platform\n",
     "```\n",
     "\n",
-    "`platform()` muestra la plataforma (sistema operativo) que se está utilizando.\n",
+    "`platform` muestra la plataforma (sistema operativo) que se está utilizando.\n",
     "\n",
     "```python\n",
     "from sys import executable, prefix\n",
@@ -285,8 +315,8 @@
     "\n",
     "ruta = pathlib.Path()  # Esta ruta es nuestro directorio de trabajo\n",
     "nombre_usuario = \"tajamar\"\n",
-    "ruta_2 = pathlib.Path(f\"C:\\Users\\{usuario}\\Desktop\")  # Esta ruta conduce en Windows al escritorio de un usuario\n",
-    "ruta_3 = ruta_2 / .. / \"Documentos\" / \"clases-tajamar\"  # Esta ruta desciende un nivel, y entra en las carpetas /Documentos/clases-tajamar\n",
+    "ruta_2 = pathlib.Path(f\"C:/Users/{nombre_usuario}/Desktop\")  # Esta ruta conduce en Windows al escritorio de un usuario\n",
+    "ruta_3 = ruta_2 / \"..\" / \"Documentos\" / \"clases-tajamar\"  # Esta ruta desciende un nivel, y entra en las carpetas /Documentos/clases-tajamar\n",
     "ruta_3.resolve()  # Resuelve la ruta\n",
     "directorios = [\"repositorios\", \"ejercicios_python\", \"ejercicios_corregidos\", \"dados.py\"]\n",
     "ruta_4 = ruta_2.joinpath(*directorios)  # Crea una ruta desde el escritorio entrando en /repositorios/ejercicios_python/ejercicios_corregidos/dados.py\n",
@@ -409,7 +439,9 @@
     "\n",
     "` which(<archivo>)`busca un archivo en el sistema.\n",
     "\n",
-    "Además, `shutil` incluye funciones para comprimir y descomprimir archivos, para ver el espacio utilizado en el disco duro, etc..."
+    "Además, `shutil` incluye funciones para comprimir y descomprimir archivos, para ver el espacio utilizado en el disco duro, etc...\n",
+    "\n",
+    "**IMPORTANTE NO ELIMINAR POR ACCIDENTE INFORMACIÓN DEL SISTEMA, PUEDE OCURRIR MUY MUY FACILMENTE!!!!**"
    ]
   }
  ],
