--- a/codigo/Iteradores.ipynb
+++ b/codigo/Iteradores.ipynb
@@ -422,7 +422,15 @@
     "    print(*multiplicacion)  # Podemos desempaquetar con * gracias a que hemos usado starmap\n",
     "```\n",
     "\n",
-    "`starmap()`es como `map()` pero permite desempaquetar sus elementos con `*` separando asi los iteradores.\n",
+    "`starmap()`es como `map()` pero desempaqueta sus elementos con `*` separando asi los iteradores. Ejemplo:\n",
+    "\n",
+    "```python\n",
+    "from itertools import starmap\n",
+    "\n",
+    "lista = [(1, 5), (1, 3), (3, 5), (7, 4)]\n",
+    "lista_exponencial = list(map(pow, lista))  # Con map, pow no podria usarse porque requiere de dos argumentos\n",
+    "lista_exponencial = list(starmap(pow, lista))  # starmap rellena pow(<1>, <2>) desempaquetando las tuplas\n",
+    "```\n",
     "\n",
     "```python\n",
     "from itertools import count\n",
@@ -455,13 +463,92 @@
     "`repeat()`repite in objeto de forma infinita, a menos que se le especifique un valor de parada.\n",
     "\n",
     "```python\n",
-    "from itertools import a\n",
+    "from itertools import accumulate\n",
+    "import operator\n",
     "\n",
-    "\n",
+    "lista = [2, 3, 4, 5]\n",
+    "result = accumulate(lista, operator.mul)\n",
+    "for acumulacion in result:\n",
+    "    print(\"acumulacion\")\n",
     "```\n",
     "\n",
-    "`a()` .\n",
-    "\n"
+    "`accumulate()` va acumulando poco a poco un iterable de acuerdo a una operacion.\n",
+    "\n",
+    "```python\n",
+    "from itertools import takewhile, dropwhile\n",
+    "\n",
+    "data = list(range(11)) + [1, 2, 3]\n",
+    "menores_5 = takewhile(lambda numero: numero < 5, data)\n",
+    "mayores_7 = dropwhile(lambda numero: numero <= 7, data)\n",
+    "```\n",
+    "\n",
+    "`takewhile()` evalua elemento a elemento y los incluye en un nuevo iterable *cuando la condición se cumpla*. `dropwhile()` hace lo mismo pero, en vez de incluirlos, los excluye.\n",
+    "\n",
+    "```python\n",
+    "from itertools import combinations\n",
+    "\n",
+    "pelotas = (\"roja\", \"verde\", \"azul\")\n",
+    "eleccion = combinations(pelotas, 3)\n",
+    "```\n",
+    "\n",
+    "`combinations()` crea una tupla para cada posible combinación de los elementos de un iterable.\n",
+    "\n",
+    "```python\n",
+    "from itertools import combinations_with_replacement\n",
+    "\n",
+    "pelotas = (\"roja\", \"verde\", \"azul\")\n",
+    "eleccion = combinations_with_replacement(pelotas, 3)\n",
+    "```\n",
+    "\n",
+    "`combinations_with_replacement()` crea una tupla para cada posible combinación de los elementos de un iterable, con repetición de estos elementos.\n",
+    "\n",
+    "```python\n",
+    "from itertools import permutations\n",
+    "\n",
+    "pelotas = (\"roja\", \"verde\", \"azul\")\n",
+    "eleccion = permutations(pelotas, 3)\n",
+    "```\n",
+    "\n",
+    "`permutations()` crea una tupla para cada posible permutación de los elementos de un iterable.\n",
+    "\n",
+    "```python\n",
+    "from itertools import product\n",
+    "\n",
+    "eje_x = [1, 2, 3]\n",
+    "eje_y = [10, 20, 30]\n",
+    "producto_cartesiano = product(eje_x, eje_y)\n",
+    "```\n",
+    "\n",
+    "`product()` crea una tupla para cada multiplicacion cartesiana entre dos iterables.\n",
+    "\n",
+    "```python\n",
+    "from itertools import compress\n",
+    "\n",
+    "seleccion = (True, False, False, True, False)\n",
+    "colores = [\"rojo\", \"verde\", \"amarillo\", \"azul\", \"negro\"]\n",
+    "colores_elegidos = compress(colores, seleccion)\n",
+    "```\n",
+    "\n",
+    "`compress()` filtra un iterable de acuerdo a condiciones lógicas de otro iterable (filtra un iterable con otro).\n",
+    "\n",
+    "```python\n",
+    "from itertools import groupby\n",
+    "\n",
+    "alumnos = [\n",
+    "    {\"nombre\": \"Hector\", \"clase\": \"economia\"},\n",
+    "    {\"nombre\": \"Joaquin\", \"clase\": \"artes\"},\n",
+    "    {\"nombre\": \"Irina\", \"clase\": \"artes\"},\n",
+    "    {\"nombre\": \"Laura\", \"clase\": \"matematicas\"},\n",
+    "    {\"nombre\": \"Carlos\", \"clase\": \"matematicas\"},\n",
+    "    {\"nombre\": \"Teresa\", \"clase\": \"matematicas\"},\n",
+    "    {\"nombre\": \"Roland\", \"clase\": \"economia\"}\n",
+    "]\n",
+    "agrupacion = groupby(alumnos, key=lambda alumno: alumno[\"clase\"])\n",
+    "for clase, alumnos in agrupacion:\n",
+    "    print(f\"{clase}: {list(alumnos)}\")\n",
+    "```\n",
+    "\n",
+    "`groupby()` agrupa un iterable de acuerdo a una llave, parecido a las llaves de sorted() pero en vez de ordenar, agrupa."
    ]
   }
  ],
