Casi completados apuntes

--- a/codigo/Principios SOLID.ipynb
+++ b/codigo/Principios SOLID.ipynb
@@ -437,7 +437,31 @@
    "id": "9b8a3925-a617-47bc-86b9-993cf4e75e43",
    "metadata": {},
    "source": [
-    "## **S**ingle responsability (Responsabilidad única)"
+    "## **S**ingle responsability (Responsabilidad única)\n",
+    "\n",
+    "Una clase debería tener una, y solo una, razón para cambiar. En otras palabras, una clase debería tener una sola responsabilidad o propósito."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56e08209-7a40-414c-b343-81cc748623ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Incumpliendo el principio\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d24bce9-b4c0-4048-a5e9-6481c65247af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cumpliendo el principio\n",
+    "\n"
    ]
   },
   {
@@ -445,7 +469,31 @@
    "id": "b1c8d5b8-103d-4c95-a7eb-7ef56903e893",
    "metadata": {},
    "source": [
-    "## **O**pen-Closed (Abierto a extensión, cerrado a modificación)"
+    "## **O**pen-Closed (Abierto a extensión, cerrado a modificación)\n",
+    "\n",
+    "El software debe estar abierto para extensión, pero cerrado para modificación. Esto significa que deberías poder agregar nuevas funcionalidades sin cambiar el código existente."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a82bcbf9-6924-469f-9438-800330ac1691",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Incumpliendo el principio\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83218563-e1da-4f30-a553-3dc65e1a7f1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cumpliendo el principio\n",
+    "\n"
    ]
   },
   {
@@ -453,7 +501,31 @@
    "id": "9846e438-7136-4783-bd60-908cf4264e73",
    "metadata": {},
    "source": [
-    "## **L*iiskov substitution (Sustitución de Liskov)"
+    "## **L*iskov substitution (Sustitución de Liskov)\n",
+    "\n",
+    "Los objetos de una clase derivada deben poder sustituir a los objetos de una clase base sin alterar el comportamiento del programa."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05d566ea-988a-4e23-ae2a-5eb5ac3125d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Incumpliendo el principio\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0264e33b-ca3d-4b5d-a1f9-a026805b901d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cumpliendo el principio\n",
+    "\n"
    ]
   },
   {
@@ -461,7 +533,103 @@
    "id": "bfb64e43-4293-4d2a-868c-f33108e6b33e",
    "metadata": {},
    "source": [
-    "## **I**nterface segregation (Segregación de interfaces)"
+    "## **I**nterface segregation (Segregación de interfaces)\n",
+    "\n",
+    "No se deberían de utilizar dependencias de interfaces que no usan. Esto significa que es mejor tener interfaces más específicas y pequeñas en lugar de una única interfaz grande."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5204665f-19ea-47ab-88d4-656ceaa1b9c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Incumpliendo el principio\n",
+    "\n",
+    "class Animal(ABC):\n",
+    "    def comer(self):\n",
+    "        print(\"El animal esta comiendo\")\n",
+    "\n",
+    "    @abstractmethod\n",
+    "    def correr(self):\n",
+    "        pass\n",
+    "\n",
+    "    @abstractmethod\n",
+    "    def volar(self):\n",
+    "        pass\n",
+    "\n",
+    "    @abstractmethod\n",
+    "    def nadar(self):\n",
+    "        pass\n",
+    "\n",
+    "\n",
+    "class Caballo(Animal):\n",
+    "    def correr(self):\n",
+    "        print(\"El caballo esta corriendo\")\n",
+    "\n",
+    "class Pinguino(Animal):\n",
+    "    def nadar(self):\n",
+    "        print(\"El pingüino esta corriendo\")\n",
+    "\n",
+    "    def correr(self):\n",
+    "        print(\"El pingüino esta corriendo\")\n",
+    "\n",
+    "class Mirlo(Animal):\n",
+    "    def correr(self):\n",
+    "        print(\"El mirlo esta corriendo\")\n",
+    "\n",
+    "    def volar(self):\n",
+    "        print(\"El mirlo esta volando\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f10d8ae-8560-462d-a3c3-2f2c8e8d8d9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cumpliendo el principio\n",
+    "\n",
+    "class Animal(ABC):\n",
+    "    def comer(self):\n",
+    "        print(\"El animal esta comiendo\")\n",
+    "\n",
+    "class Volador(ABC):\n",
+    "    @abstractmethod\n",
+    "    def volar(self):\n",
+    "        pass\n",
+    "\n",
+    "class Acuatico(ABC):\n",
+    "    @abstractmethod\n",
+    "    def nadar(self):\n",
+    "        pass\n",
+    "\n",
+    "class Terrestre(ABC):\n",
+    "    @abstractmethod\n",
+    "    def caminar(self):\n",
+    "        pass\n",
+    "\n",
+    "\n",
+    "\n",
+    "class Caballo(Animal, Terrestre):\n",
+    "    def correr(self):\n",
+    "        print(\"El caballo esta corriendo\")\n",
+    "\n",
+    "class Pinguino(Animal, Terrestre, Acuatico):\n",
+    "    def nadar(self):\n",
+    "        print(\"El pingüino esta corriendo\")\n",
+    "\n",
+    "    def correr(self):\n",
+    "        print(\"El pingüino esta corriendo\")\n",
+    "\n",
+    "class Mirlo(Animal, Terrestre, Volador):\n",
+    "    def correr(self):\n",
+    "        print(\"El mirlo esta corriendo\")\n",
+    "\n",
+    "    def volar(self):\n",
+    "        print(\"El mirlo esta volando\")\n"
    ]
   },
   {
@@ -469,7 +637,63 @@
    "id": "a22a773b-48be-4ddd-aa84-786801193359",
    "metadata": {},
    "source": [
-    "## **D**ependency inversion (Inversión de dependencias)"
+    "## **D**ependency inversion (Inversión de dependencias)\n",
+    "\n",
+    "Las entidades de **alto nivel no deberían depender de entidades de bajo nivel**. Ambas deberían depender de **abstracciones**. Es decir. las abstracciones no deberían depender de los detalles, los detalles deberían depender de las abstracciones. Esto se consigue mediante **inyección de dependencias**.\n",
+    "\n",
+    "Este posiblemente sea el principio más importante y más complicado de aplicar. Un buen uso de el hace que el código este bien desacoplado y se mantenga facil de mantener y cambiar."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63f11061-3a50-41dc-9a50-4dfb2a5b1923",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Incumpliendo el principio\n",
+    "\n",
+    "class Bombilla:\n",
+    "    def on(self):\n",
+    "        print(\"Se ha encendido\")\n",
+    "\n",
+    "    def off(self):\n",
+    "        print(\"Se ha apagado\")\n",
+    "\n",
+    "class Interruptor:\n",
+    "    def __init__(self, bombilla: Bombilla):\n",
+    "        self.bombilla = bombilla\n",
+    "        self.status = False  # La bombilla empieza apagada\n",
+    "\n",
+    "    def on_off(self):\n",
+    "        if self.status:\n",
+    "            self.bombilla.off()\n",
+    "        else:\n",
+    "            self.bombilla.on()\n",
+    "\n",
+    "# Implementar ahora un ventilador!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eabc350b-6af9-4ca6-9aab-f4daf0aac9f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cumpliendo el principio\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "365bec17-87d5-4959-aed9-54c08ab214d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Aplicar los 5 principios para hacer un sistema de notificaciones por SMS, Email, Whatsapp, Telegram y un sistema interno por Push"
    ]
   }
  ],
