--- a/codigo/Testing y Principios SOLID.ipynb
+++ b/codigo/Testing y Principios SOLID.ipynb
@@ -439,7 +439,7 @@
    "source": [
     "## **S**ingle responsability (Responsabilidad única)\n",
     "\n",
-    "Una clase debería tener una, y solo una, razón para cambiar. En otras palabras, una clase debería tener una sola responsabilidad o propósito."
+    "Un componente debería tener una única responsabilidad o propósito."
    ]
   },
   {
@@ -450,7 +450,28 @@
    "outputs": [],
    "source": [
     "# Incumpliendo el principio\n",
-    "\n"
+    "import datetime\n",
+    "\n",
+    "def conexion_base_datos(url, usuario, contraseña, *, time=24*60*60):\n",
+    "    def validar(usuario, contraseña) -> bool:\n",
+    "        ...\n",
+    "        return True\n",
+    "\n",
+    "    def hacer_cosas_en_base_datos():\n",
+    "        ...\n",
+    "\n",
+    "    exito_conexion = True if mysql.connector.connect(host=url,database='mi_base_datos') else False\n",
+    "    if exito_conexion:\n",
+    "        print(\"Conexion exitosa\")\n",
+    "    else:\n",
+    "        raise ValueError(\"La url no es valida\")  # Se tendria una excepcion propia\n",
+    "    exito_validacion = validar(usuario, contraseña)\n",
+    "    if exito_validacion:\n",
+    "        ahora = datetime.datetime.now()\n",
+    "        limite_tiempo = ahora + datetime.timedelta(seconds=time)\n",
+    "        while limite_tiempo > ahora:\n",
+    "            ahora = datetime.datetime.now()\n",
+    "        hacer_cosas_en_base_datos()"
    ]
   },
   {
@@ -461,7 +482,36 @@
    "outputs": [],
    "source": [
     "# Cumpliendo el principio\n",
-    "\n"
+    "\n",
+    "import datetime\n",
+    "\n",
+    "def conectar(url) -> bool:\n",
+    "        ...\n",
+    "        return True\n",
+    "\n",
+    "def validar(usuario, contraseña) -> bool:\n",
+    "        ...\n",
+    "        return True\n",
+    "\n",
+    "def hacer_cosas_en_base_datos():\n",
+    "        ...\n",
+    "\n",
+    "def mantener_conexion(time=24*60*60):\n",
+    "    ahora = datetime.datetime.now()\n",
+    "    limite_tiempo = ahora + datetime.timedelta(seconds=time)\n",
+    "    while limite_tiempo > ahora:\n",
+    "        ahora = datetime.datetime.now()\n",
+    "    hacer_cosas_en_base_datos()\n",
+    "\n",
+    "def conexion_base_datos(url, usuario, contraseña, *, time=24*60*60):\n",
+    "    exito_conexion = conectar(url)\n",
+    "    if exito_conexion:\n",
+    "        print(\"Conexion exitosa\")\n",
+    "    else:\n",
+    "        raise ValueError(\"La url no es valida\")  # Se tendria una excepcion propia\n",
+    "    exito_validacion = validar(usuario, contraseña)\n",
+    "    if exito_validacion:\n",
+    "        mantener_conexion()\n"
    ]
   },
   {
@@ -471,7 +521,7 @@
    "source": [
     "## **O**pen-Closed (Abierto a extensión, cerrado a modificación)\n",
     "\n",
-    "El software debe estar abierto para extensión, pero cerrado para modificación. Esto significa que deberías poder agregar nuevas funcionalidades sin cambiar el código existente."
+    "El software debe estar *abierto para extensión, pero cerrado para modificación*. Esto significa que deberías poder agregar nuevas funcionalidades sin cambiar el código existente."
    ]
   },
   {
@@ -482,7 +532,8 @@
    "outputs": [],
    "source": [
     "# Incumpliendo el principio\n",
-    "\n"
+    "\n",
+    "### Calculadora"
    ]
   },
   {
@@ -493,7 +544,8 @@
    "outputs": [],
    "source": [
     "# Cumpliendo el principio\n",
-    "\n"
+    "\n",
+    "### Misma calculadora"
    ]
   },
   {
@@ -501,9 +553,9 @@
    "id": "9846e438-7136-4783-bd60-908cf4264e73",
    "metadata": {},
    "source": [
-    "## **L*iskov substitution (Sustitución de Liskov)\n",
+    "## **L**iskov substitution (Sustitución de Liskov)\n",
     "\n",
-    "Los objetos de una clase derivada deben poder sustituir a los objetos de una clase base sin alterar el comportamiento del programa."
+    "Los objetos de una *clase derivada* **deben poder sustituir** a los objetos de una *clase padre* **sin alterar el comportamiento**."
    ]
   },
   {
@@ -514,7 +566,22 @@
    "outputs": [],
    "source": [
     "# Incumpliendo el principio\n",
-    "\n"
+    "\n",
+    "class Pajaro(ABC):\n",
+    "    def volar(self):\n",
+    "        print(\"Esta volando\")\n",
+    "\n",
+    "    @abstractmethod\n",
+    "    def comer_grano(self):\n",
+    "        ...\n",
+    "\n",
+    "class Paloma(Pajaro):\n",
+    "    def comer_grano(self):\n",
+    "        print(\"La paloma come un poco de maiz\")\n",
+    "\n",
+    "class Pinguino(Pajaro):\n",
+    "    def comer_grano(self):\n",
+    "        raise Exception(\"Los pingüinos no pueden comer grano!\")"
    ]
   },
   {
@@ -525,7 +592,24 @@
    "outputs": [],
    "source": [
     "# Cumpliendo el principio\n",
-    "\n"
+    "\n",
+    "class Pajaro(ABC):\n",
+    "    alas = True\n",
+    "    \n",
+    "    @abstractmethod\n",
+    "    def comer(self):\n",
+    "        ...\n",
+    "\n",
+    "class Paloma(Pajaro):\n",
+    "    def comer(self):\n",
+    "        print(\"La paloma come un poco de maiz\")\n",
+    "\n",
+    "    def volar(self):\n",
+    "        print(\"La paloma esta volando\")\n",
+    "\n",
+    "class Pinguino(Pajaro):\n",
+    "    def comer(self):\n",
+    "        print(\"El pinguino come un pescado\")"
    ]
   },
   {
