--- a/codigo/Testing y Principios SOLID.ipynb
+++ b/codigo/Testing y Principios SOLID.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "164124f0-b14b-4036-b1c2-89c2b4555910",
    "metadata": {},
    "outputs": [],
@@ -77,18 +77,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9f9ad606-952a-46a3-9ed4-d88cf646c6ea",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Un test de propiedad\n",
     "\n",
@@ -106,7 +98,7 @@
    "source": [
     "## Test Driven Development\n",
     "\n",
-    "El **Test Driven Decelopment** es una práctica que consiste en hacer *antes el test del código, para despues ir haciendo el código de acuerdo a los tests*. Esta metodología se llama **Red-Green_refactor**"
+    "El **Test Driven Decelopment** es una práctica que consiste en hacer *antes el test del código, para despues ir haciendo el código de acuerdo a los tests*. Esta metodología se llama **Red-Green-Refactor**"
    ]
   },
   {
@@ -342,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "68acee69-f4f6-4755-a7ac-59a83390270f",
    "metadata": {},
    "outputs": [],
@@ -367,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b628254a-f801-4584-80ac-e02f7eb42e0a",
    "metadata": {},
    "outputs": [],
@@ -391,23 +383,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "1b1c16ae-2e6d-4068-ad3d-e55dbaf3c60e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "El coche está arrancando.\n",
-      "El coche se ha detenido.\n",
-      "Soy un Coche\n",
-      "La bicicleta está en movimiento.\n",
-      "La bicicleta se ha detenido.\n",
-      "Soy un Bicicleta\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "coche = Coche()\n",
     "coche.arrancar()\n",
@@ -767,7 +746,46 @@
    "source": [
     "# Cumpliendo el principio\n",
     "\n",
-    "\n"
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "class Encendible(ABC):\n",
+    "    def on(self):\n",
+    "        print(\"Encendido\")\n",
+    "\n",
+    "    def off(self):\n",
+    "        print(\"Apagado\")\n",
+    "\n",
+    "class Bombilla(Encendible):\n",
+    "    def __init__(self):\n",
+    "        self.status = False\n",
+    "\n",
+    "class Interruptor:\n",
+    "    def __init__(self, aparato: Encendible):\n",
+    "        self.aparato = apataro\n",
+    "\n",
+    "    def operate(self):\n",
+    "        if self.aparato.status:\n",
+    "            self.device.turn_off()\n",
+    "        else:\n",
+    "            self.device.turn_on()\n"
    ]
   },
   {
