--- a/codigo/Testing y Principios SOLID.ipynb
+++ b/codigo/Testing y Principios SOLID.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "164124f0-b14b-4036-b1c2-89c2b4555910",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
     "        self.assertEqual(suma(2, 3), 5)\n",
     "    \n",
     "    def test_suma_negativos(self):\n",
-    "        self.assertEqual(suma(-1, 1), 0)\n",
+    "        self.assertNotEqual(suma(-1, 1), 10)\n",
     "\n",
     "# Con pytest, instalado desde pip\n",
     "\n",
@@ -64,7 +64,7 @@
     "    assert suma(2, 3) == 5\n",
     "\n",
     "def test_suma_negativos():\n",
-    "    assert suma(-1, 1) == 0"
+    "    assert suma(-1, 1) != 10"
    ]
   },
   {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "9f9ad606-952a-46a3-9ed4-d88cf646c6ea",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
     "def resta(a: int | float, b: int | float) -> int | float:\n",
     "    return a - b\n",
     "\n",
-    "numero = 1\n",
+    "numero = 1  # Estrategia (numerica) ---> hypothesis\n",
     "assert suma(2, resta(numero, 2)) == numero  # numero + 2 - 2 = numero, sin importar el numero!"
    ]
   },
@@ -98,7 +98,7 @@
    "source": [
     "## Test Driven Development\n",
     "\n",
-    "El **Test Driven Decelopment** es una práctica que consiste en hacer *antes el test del código, para despues ir haciendo el código de acuerdo a los tests*. Esta metodología se llama **Red-Green-Refactor**"
+    "El **Test Driven Decelopment** (TDD) es una práctica que consiste en hacer *antes el test del código, para despues ir haciendo el código de acuerdo a los tests*. Esta metodología se llama **Red-Green-Refactor**"
    ]
   },
   {
@@ -125,21 +125,44 @@
     "## Sintaxis básica\n",
     "\n",
     "```python\n",
-    "def test_<nombre>():\n",
-    "    assert <condicion>\n",
-    "    with pytest.raises(<tipo error>, match=<mensaje de error>):  # En caso de un raise\n",
-    "        <condicion de error>\n",
+    "class Test>nombre>:\n",
+    "    def test_<nombre>():\n",
+    "        assert <condicion>\n",
+    "        with pytest.raises(<tipo error>, match=<mensaje de error>):  # En caso de un raise\n",
+    "            <condicion de error>\n",
     "```\n",
     "\n",
-    "La forma de ejecutar los tests en Pytest es `pytest`, aunque se puede especificar un modo verboso con `pytest -v` o un modo 1-error `pytest --maxfail=1`."
+    "La forma de ejecutar los tests en Pytest es `pytest` o, si no encuentra el lugar (se que puede configurar), `pytest <path>`, aunque se puede especificar un modo verboso con `pytest -v` o un modo 1-error `pytest --maxfail=1`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "951745e8-0932-44a4-ba91-62d2b14c83cc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31mERROR: usage: ipykernel_launcher.py [options] [file_or_dir] [file_or_dir] [...]\n",
+      "ipykernel_launcher.py: error: unrecognized arguments: -f\n",
+      "  inifile: None\n",
+      "  rootdir: C:\\Users\\Proye\n",
+      "\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<ExitCode.USAGE_ERROR: 4>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class ListaFrutas:\n",
     "    def __init__(self):\n",
@@ -180,7 +203,7 @@
     "# Mismo codigo que antes pero preparando la instancia con setup y eliminandola con teardown\n",
     "\n",
     "def setup_ListaFrutas(function):\n",
-    "    global instancia  # Crea una isntancia global para los tests\n",
+    "    global instancia  # Crea una instancia global para los tests\n",
     "    instancia = ListaFrutas()\n",
     "    print(f\"\\nConfigurando la prueba: {function.__name__}\")\n",
     "\n",
@@ -250,6 +273,7 @@
     "    (\"pera\", \"pera\"),\n",
     "    (\"plátano\", \"plátano\")\n",
     "])\n",
+    "\n",
     "def test_añadir_fruta_parametrizado(instancia, fruta, resultado):  # Se inyecta no solo la fixture sino tambien la parametrizacion\n",
     "    instancia.añadir_fruta(fruta)  # Primera parte de la parametrizacion (fruta)\n",
     "    assert instancia.lista[-1] == resultado  # Segunda parte de la parametrizacion (resultado)"
@@ -267,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "94cffdd8-049a-49db-a9e4-520ec4702803",
    "metadata": {},
    "outputs": [],
@@ -303,16 +327,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49129c24-0957-48a9-b2fd-f3718b1213a2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Mejorar tests calculadora"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "b3db77e3-7338-4e3a-98e7-ba24537f2868",
    "metadata": {},
@@ -334,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "68acee69-f4f6-4755-a7ac-59a83390270f",
    "metadata": {},
    "outputs": [],
@@ -359,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "b628254a-f801-4584-80ac-e02f7eb42e0a",
    "metadata": {},
    "outputs": [],
@@ -383,10 +397,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "1b1c16ae-2e6d-4068-ad3d-e55dbaf3c60e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El coche está arrancando\n",
+      "El coche se ha detenido\n",
+      "Soy un coche\n",
+      "La bicicleta está en movimiento\n",
+      "La bicicleta se ha detenido\n",
+      "Soy un bicicleta\n"
+     ]
+    }
+   ],
    "source": [
     "coche = Coche()\n",
     "coche.arrancar()\n",
@@ -397,18 +424,6 @@
     "bicicleta.arrancar()\n",
     "bicicleta.detener()\n",
     "bicicleta.identificar()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a10b4b0f-0dd7-4e58-820e-4fcc16b80153",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Crear una interfaz para conexion de base de datos y una clase para postgresql, mysql y oracle\n",
-    "# Se necesita una direccion, un usuario y una contraseña\n",
-    "# Testear con tests, y hacer un metodo para todas que sea testear conexion (una especie de ping), sin necesidad de usuario o contraseña)"
    ]
   },
   {
@@ -450,7 +465,7 @@
     "        limite_tiempo = ahora + datetime.timedelta(seconds=time)\n",
     "        while limite_tiempo > ahora:\n",
     "            ahora = datetime.datetime.now()\n",
-    "        hacer_cosas_en_base_datos()"
+    "            hacer_cosas_en_base_datos()"
    ]
   },
   {
@@ -480,7 +495,7 @@
     "    limite_tiempo = ahora + datetime.timedelta(seconds=time)\n",
     "    while limite_tiempo > ahora:\n",
     "        ahora = datetime.datetime.now()\n",
-    "    hacer_cosas_en_base_datos()\n",
+    "        hacer_cosas_en_base_datos()\n",
     "\n",
     "def conexion_base_datos(url, usuario, contraseña, *, time=24*60*60):\n",
     "    exito_conexion = conectar(url)\n",
@@ -512,7 +527,15 @@
    "source": [
     "# Incumpliendo el principio\n",
     "\n",
-    "### Calculadora"
+    "class Calculadora:\n",
+    "    def sumar(a, b):\n",
+    "        return a + b\n",
+    "\n",
+    "    def restar(a, b):\n",
+    "        return a - b\n",
+    "\n",
+    "    def cuadrado(a):  # MAL!!!\n",
+    "        return a ** 2"
    ]
   },
   {
@@ -524,7 +547,19 @@
    "source": [
     "# Cumpliendo el principio\n",
     "\n",
-    "### Misma calculadora"
+    "class Calculadora:\n",
+    "    def sumar(a, b):\n",
+    "        return a + b\n",
+    "\n",
+    "    def restar(a, b):\n",
+    "        return a - b\n",
+    "\n",
+    "    def multiplicar(a, b)\n",
+    "        return a * b\n",
+    "\n",
+    "class CalculadoraCientifica(Calculadora):\n",
+    "    def cuadrado(a):  # BIEN!!!\n",
+    "        return a ** 2"
    ]
   },
   {
@@ -559,6 +594,9 @@
     "        print(\"La paloma come un poco de maiz\")\n",
     "\n",
     "class Pinguino(Pajaro):\n",
+    "    def volar():\n",
+    "        print(\"Este pajaro no vuela\")  # MAL!!!\n",
+    "    \n",
     "    def comer_grano(self):\n",
     "        raise Exception(\"Los pingüinos no pueden comer grano!\")"
    ]
@@ -671,7 +709,7 @@
     "\n",
     "class Terrestre(ABC):\n",
     "    @abstractmethod\n",
-    "    def caminar(self):\n",
+    "    def correr(self):\n",
     "        pass\n",
     "\n",
     "\n",
@@ -724,14 +762,15 @@
     "        print(\"Se ha apagado\")\n",
     "\n",
     "class Interruptor:\n",
-    "    def __init__(self, bombilla: Bombilla):\n",
-    "        self.bombilla = bombilla\n",
+    "    def __init__(self):\n",
     "        self.status = False  # La bombilla empieza apagada\n",
     "\n",
     "    def on_off(self):\n",
     "        if self.status:\n",
+    "            self.status = False\n",
     "            self.bombilla.off()\n",
     "        else:\n",
+    "            self.status = True\n",
     "            self.bombilla.on()\n",
     "\n",
     "# Implementar ahora un ventilador!"
@@ -745,26 +784,6 @@
    "outputs": [],
    "source": [
     "# Cumpliendo el principio\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "class Encendible(ABC):\n",
     "    def on(self):\n",
