Mejorado ultimo ejemplo

--- a/codigo/Testing y Principios SOLID.ipynb
+++ b/codigo/Testing y Principios SOLID.ipynb
@@ -785,26 +785,46 @@
    "source": [
     "# Cumpliendo el principio\n",
     "\n",
+    "from abc import ABC\n",
+    "\n",
     "class Encendible(ABC):\n",
     "    def on(self):\n",
-    "        print(\"Encendido\")\n",
+    "        print(f\"Encendido {self.__class__.__name__}\")\n",
     "\n",
     "    def off(self):\n",
-    "        print(\"Apagado\")\n",
+    "        print(f\"Apagado {self.__class__.__name__}\")\n",
     "\n",
     "class Bombilla(Encendible):\n",
+    "    def __init__(self):\n",
+    "        self.status = False\n",
+    "        \n",
+    "class Ventilador(Encendible):\n",
     "    def __init__(self):\n",
     "        self.status = False\n",
     "\n",
     "class Interruptor:\n",
     "    def __init__(self, aparato: Encendible):\n",
-    "        self.aparato = apataro\n",
+    "        self.aparato = aparato\n",
     "\n",
-    "    def operate(self):\n",
+    "    def on_off(self):\n",
     "        if self.aparato.status:\n",
-    "            self.device.turn_off()\n",
+    "            self.aparato.off()\n",
+    "            self.aparato.status = False\n",
     "        else:\n",
-    "            self.device.turn_on()\n"
+    "            self.aparato.on()\n",
+    "            self.aparato.status = True\n",
+    "            \n",
+    "bombilla = Bombilla()\n",
+    "ventilador = Ventilador()\n",
+    "circuito = Interruptor(bombilla)\n",
+    "circuito.on_off()  # Encendida\n",
+    "circuito.on_off()  # Apagada\n",
+    "circuito = Interruptor(ventilador)\n",
+    "circuito.on_off()\n",
+    "circuito.on_off()\n",
+    "circuito.on_off()\n",
+    "print(bombilla.status)\n",
+    "print(ventilador.status)\n"
    ]
   },
   {
